--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
+    "http-status-codes": "^2.1.4",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
